--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
+    "multer": "^1.4.2",
     "normalize.css": "^8.0.1"
   }
 }
