--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parse": "^0.4.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
