--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "jquery": "^3.6.0",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
-    "normalize.css": "^8.0.1"
+    "mysql2": "^2.2.5",
+    "normalize.css": "^8.0.1",
+    "sequelize": "^6.6.2"
   }
 }
