--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "normalize.css": "^8.0.1",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0"
   }
 }
