--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "node-fetch": "^2.6.1",
     "normalize.css": "^8.0.1",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0"
